# PhiVideo

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
resources/: UI.json
resources/Languages/: 0en  1zh  2ja  3tw
src/CLI/: CLI11.h
src/PGR/: Main.cpp
src/PGR/Application/: Application.cpp  Application.h  Chart.h  Constant.h  Event.cpp  Event.h  HitFx.cpp  HitFx.h  JudgeLine.h  LoadFiles.cpp  Mix.cpp  Note.cpp  Note.h  Render.cpp
src/PGR/Base/: Base.cpp  Base.h  Maths.cpp  Maths.h
src/PGR/Log/: Log.cpp  Log.h
src/PGR/Render/: Framebuffer.cpp  Framebuffer.h  Texture.cpp  Texture.h
src/PhiVideo/: Main.cpp
src/PhiVideo/Application/: Application.cpp  Application.h  Chart.h  Constant.h  Event.cpp  Event.h  HitFx.cpp  HitFx.h  JudgeLine.h  LoadFiles.cpp  Mix.cpp  Note.cpp  Note.h  RenderFrame.cpp  RenderVideo.cpp
src/PhiVideo/Base/: Base.cpp  Base.h  Maths.cpp  Maths.h
src/PhiVideo/Log/: Log.cpp  Log.h
src/PhiVideo/Render/: Framebuffer.cpp  Framebuffer.h  Texture.cpp  Texture.h
src/cJSON/: cJSON.h
